refactor, add makefile

--- a/task_01/report_task_01.tex
+++ b/task_01/report_task_01.tex
@@ -77,12 +77,12 @@ POSIX Threads, вычисляющий число $\pi$, как интеграл:
 Число отрезков: $N = 1000\,000\,000$
 
 Для каждого числа нитей проводилось 3 эксперимента, в таблице представлено время каждого эксперимента,
-усреднённое время и ускорение для .
+усреднённое время и ускорение.
 
 \begin{center}
   \begin{tabular}{|p{1.5 cm}|p{3 cm}|p{3 cm}|p{3 cm}|p{3 cm}|p{2 cm}|}
     \hline
-    Число нитей $n$ & Эксперимент $1$ & Эксперимент $2$ & Эксперимент $3$ & Среднее время работы (c) & Ускорение \\
+    Число нитей $n$ & Эксперимент $1$ (с) & Эксперимент $2$ (с) & Эксперимент $3$ (с) & Среднее время работы (c) & Ускорение \\
     \hline
     $1$ & $3.518362$ & $3.610614$ & $3.620331$ & $3.583102$ & $1$ \\ 
     \hline
